feat: Implement diagnostics panel for camera screen
This commit introduces a real-time diagnostics panel on the camera screen to help with debugging and understanding camera behavior across different devices and orientations.

- **Diagnostics Panel:**
    - Adds a new `DiagnosticsPanel` widget that overlays the camera view.
    - Displays key technical information, including:
        - Device and screen orientation (`Portrait`/`Landscape`).
        - Screen size (width x height).
        - Camera sensor orientation in degrees.
        - Current lens direction (`front`/`back`).
        - Preview and display aspect ratios.
    - The panel is styled with a semi-transparent background for readability without fully obscuring the camera preview.

- **Toggle Functionality:**
    - Implements a `DiagnosticsButton` (info icon) to toggle the visibility of the diagnostics panel.
    - The button's background color changes to indicate whether the panel is active.
    - The button's position adapts to both portrait and landscape orientations.

- **State Management:**
    - Adds `showDiagnostics` boolean to the `CameraState`.
    - Implements the `ToggleDiagnostics` event in `CameraBloc` to manage the panel's visibility.
    - Uses `BlocSelector` for efficient UI updates.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,5 +17,7 @@
     "orientationDownMirrored": "Down, Mirrored",
     "orientationLeftMirrored": "Left, Mirrored",
     "orientationRightMirrored": "Right, Mirrored",
-    "retakePhoto": "Retake Photo"
+    "retakePhoto": "Retake Photo",
+    "toggleDiagnostics": "Toggle Diagnostics",
+    "diagnostics": "Diagnostics"
 }
