- Refactor README.md. - Add PhotoDetailsError widget for error handling in photo details page.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -19,5 +19,7 @@
     "orientationRightMirrored": "Right, Mirrored",
     "retakePhoto": "Retake Photo",
     "toggleDiagnostics": "Toggle Diagnostics",
-    "diagnostics": "Diagnostics"
+    "diagnostics": "Diagnostics",
+    "errorSavingImage": "Error Saving Image",
+    "errorSavingImageMessage": "We encountered an issue while saving your photo. Please try again."
 }
